web: fixes bug that broke other dropdown menus
fixed bug that caused other dropdown menus to cut off content

--- a/src/web/cockpit.css
+++ b/src/web/cockpit.css
@@ -36,9 +36,13 @@ a {
     cursor: pointer;
 }
 
+.date-filter {
+    min-width: 0px;
+}
+
 .dropdown-menu {
     width: 100%;
-    min-width: 0px;
+    text-align: left;
 }
 
 .dropdown-menu > .disabled > a:hover {
